store childCount instead of just a boolean for elements
needs to update table

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2011-02-23 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* add child count to database (instead of yes/no information)
+
+2011-02-23 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* major code cleanup
 	* single code path for Ajax and non Ajax case
 	* correct order of display in non Ajax case
