--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
-2011-02-28 Sven-S. Porst <porst@sub.uni-goettingen.de>
+2011-03-14 0.8 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* introduce two display styles (old vs. improved) for the tree
+	* store all search queries _completely_ in the database
+	* remove options for different query styles
+	* simplify extension search setup: only provide a single URL
+	* move CSS into separate files
+
+2011-02-28 - 0.7 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* provide a display style using menus
 	* download hit counts from Opac
 	* display hit counts in tree style
