--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
+2011-11-25 1.2.1 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* switch default Opac URL to https
+	* only retrieve records with statusID = 0 in database queries to avoid duplicates
+	* use quotation marks in term used for index scans
+	* deal with differing data structure returned by TYPO3 4.6’s t3lib_div::readLLXMLfile()
+	* fix incorrect processing of the shallowSearch TypoScript setting
+
 2011-11-24 1.2.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
-	* vastly reduce downtime due to database update (batch add new records, switch with old records after import has finished)
+	* vastly reduce downtime due to database update (batch add new records, switch with old records after import has finished) REQUIRES DATABASE SCHEMA UPDATE
 	* fix localisation problem in TYPO3 4.6
 	* extend timeout for long scheduler actions to 20 minutes
 	* add searchFields to ext_tables.php
