--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-12-13 1.3.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* improve usage of deep Opac links (introduce a 'General' element for the records associated to parent nodes)
+	* fix bug with importing introduced in 1.2.1
+
 2011-11-25 1.2.1 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* switch default Opac URL to https
 	* only retrieve records with statusID = 0 in database queries to avoid duplicates
