--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2012-01-23 1.4.0 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+	* add nofollow attribute to tree expansion/collapsing links to reduce overzealous spidering
+
 2011-12-13 1.3.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* improve usage of deep Opac links (introduce a 'General' element for the records associated to parent nodes)
 	* fix bug with importing introduced in 1.2.1
