--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 		We depend on this data being correct and it may be incorrect, causing an
 		infinite loop.
 	* Refactor functions and variables.
+	* Split XML files generated from CSV files into chunks of 500 records (to
+		avoid hitting the 128MB RAM limit for PHP)
+	* CHANGE CSV DATA FORMAT: remove columns 2 and 3
 
 2012-01-23 1.4.0 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* add nofollow attribute to tree expansion/collapsing links to reduce overzealous spidering
