--- a/ChangeLog
+++ b/ChangeLog
@@ -83,7 +83,7 @@
 	* add 'tags' field from column 8 in CSV files
 
 2011-03-30 Sven-S. Porst <porst@sub.uni-goettingen.de>
-	* Add ID of containing Typo3 object to DOM IDs, so we can use several 
+	* Add ID of containing TYPO3 object to DOM IDs, so we can use several
 		GOK-displays on the same web page
 
 2011-03-24 0.9 Sven-S. Porst <porst@sub.uni-goettingen.de>
@@ -120,7 +120,7 @@
 	* Fixed link to index.php
 
 2011-02-10 - 0.0.24 - Sven-S. Porst <porst@sub.uni-goettingen.de>
-	* fix reliance on Typo3 being at document root
+	* fix reliance on TYPO3 being at document root
 	* rework import script to be more reliable/efficient/fast
 	* add import of English translations from 044F $a
 	* add display of English translations
