--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
-2012-04-?? 2.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
-	* Clean up class structure
-	* Add option for column style display
+2012-05-?? 2.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+	* Clean up class structure.
+	* Add option for column style display.
+	* Reduce superfluous CSV file imports.
 
 2012-02-22 1.6.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Make number of inline menu child elements configurable through the `menuInlineThreshold` TypoScript setting.
