--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
-2012-05-?? 2.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+2012-06-?? 2.0.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Clean up class structure.
 	* Add option for column style display.
 	* Reduce superfluous CSV file imports.
+	* Drop TYPO3 4.5 compatibility
 
 2012-02-22 1.6.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Make number of inline menu child elements configurable through the `menuInlineThreshold` TypoScript setting.
