--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2012-08-?? 2.2.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+2012-09-19 2.2.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Generalise hitcount analysis to enable recursive hitcounts for MSC and other classification systems
 
 2012-08-06 2.1.1 Sven-S. Porst <porst@sub.uni-goettingen.de>
