--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2012-12-? 3.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
+2012-12-11 3.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Add support for BRK authority records (Pica type »Tov«)
 		* download the records and their corresponding hit counts
 	* change naming scheme for downloaded XML files
@@ -10,6 +10,7 @@
 	* take into account the $4 subfield when determining a record’s parent
 	* avoid a few warning log messages coming from array functions
 	* improve strings used in the backend interface
+	* workaround for double-escaping bug in Pica XML output
 
 2012-09-19 2.2.0 Sven-S. Porst <porst@sub.uni-goettingen.de>
 	* Generalise hitcount analysis to enable recursive hitcounts for MSC and other classification systems
